--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img class="promo" src="images/promo.png" alt="icon">
         </div>
         <div class="box-right">
-            <div class="wrapper">
+            <div class="wrapper clearfix">
                 <div class="navigation-cards">
                     <a href="#!">All Plants</a>
                     <a href="#!">New Arrivals</a>
@@ -41,7 +41,92 @@
                     </p>
                 </div>    
             </div>
-        </div>
+            <div class="card-section clearfix">
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image1.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Barberton Daisy</p>
+                    <p class="price">$119.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image2.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Angel Wing Begonia</p>
+                    <p class="price">$169.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image3.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">African Violet</p>
+                    <p class="price">$199.00</p>
+                </div>
+            </div>
+            <div class="card-section clearfix">
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image2.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Beach Spider Lily</p>
+                    <p class="price">$129.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image5.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Blushing Bromeliad</p>
+                    <p class="price">$139.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image6.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Aluminum Plant</p>
+                    <p class="price">$179.00</p>
+                </div>
+            </div>
+            <div class="card-section clearfix">
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image7.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Bird's Nest Fern</p>
+                    <p class="price">$99.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image8.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Broadleaf Lady Palm</p>
+                    <p class="price">$59.00</p>
+                </div>
+                <div class="cards">
+                    <div class="image-wrapper">
+                        <img class="image" src="images/image9.png" alt="icon" height="250" width="250">
+                    </div>
+                    <p class="text-cards">Chinese Evergreen</p>
+                    <p class="price">$39.00</p>
+                </div>
+            </div>
+            <div class="pages">
+                <p>
+                    1
+                </p>
+                <p>
+                    2
+                </p>
+                <p>
+                    3
+                </p>
+                <p>
+                    4
+                </p>
+                <p>
+                    >
+                </p>
+            </div>
     </main>
 </body>
 </html>
