--- a/index.html
+++ b/index.html
@@ -43,24 +43,40 @@
             </div>
             <div class="card-section clearfix">
                 <div class="cards">
+                    <div class="border-hover"></div>
                     <div class="image-wrapper">
                         <img class="image" src="images/image1.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Barberton Daisy</p>
+                    <h2 class="text-cards">Barberton Daisy</h2>
                     <p class="price">$119.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image2.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Angel Wing Begonia</p>
+                    <h2 class="text-cards">Angel Wing Begonia</h2>
                     <p class="price">$169.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image3.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">African Violet</p>
+                    <h2 class="text-cards">African Violet</h2>
                     <p class="price">$199.00</p>
                 </div>
             </div>
@@ -68,22 +84,37 @@
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image2.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Beach Spider Lily</p>
+                    <h2 class="text-cards">Beach Spider Lily</h2>
                     <p class="price">$129.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image5.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Blushing Bromeliad</p>
+                    <h2 class="text-cards">Blushing Bromeliad</h2>
                     <p class="price">$139.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image6.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Aluminum Plant</p>
+                    <h2 class="text-cards">Aluminum Plant</h2>
                     <p class="price">$179.00</p>
                 </div>
             </div>
@@ -91,22 +122,37 @@
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image7.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Bird's Nest Fern</p>
+                    <h2 class="text-cards">Bird's Nest Fern</h2>
                     <p class="price">$99.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image8.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Broadleaf Lady Palm</p>
+                    <h2 class="text-cards">Broadleaf Lady Palm</h2>
                     <p class="price">$59.00</p>
                 </div>
                 <div class="cards">
                     <div class="image-wrapper">
                         <img class="image" src="images/image9.png" alt="icon" height="250" width="250">
+                        <div class="card-hover">
+                            <a href="#!"><img src="images/shopping.png" alt="icon"></a>
+                            <a href="#!"><img src="images/like.png" alt="icon"></a>
+                            <a href="#!"><img src="images/search.png" alt="icon"></a>
+                        </div>
                     </div>
-                    <p class="text-cards">Chinese Evergreen</p>
+                    <h2 class="text-cards">Chinese Evergreen</h2>
                     <p class="price">$39.00</p>
                 </div>
             </div>
